--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <button type="submit" class="submit-btn">submit</button>
                 </div>
              </form>
+             <div class="grocery-container">
+                <div class="grocery-list"></div>
+                <button class="clear-btn">clear items</button>
+             </div>
          </section>
         <script src="app.js"></script>
     </body>
